// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Fragment>
  <withAvailableFeaturesContext(Component)
    canConfigureNotifications={false}
    canUseBadges={true}
    component={
      {
        "breadcrumbs": [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": [
          {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": [],
      }
    }
    onComponentChange={[MockFunction]}
    onPageChange={[Function]}
  />
  <InfoDrawerPage
    displayed={false}
    onPageChange={[Function]}
  >
    <ProjectBadges
      component={
        {
          "breadcrumbs": [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
        }
      }
    />
  </InfoDrawerPage>
</Fragment>
`;

exports[`should render correctly: logged in user 1`] = `
<Fragment>
  <withAvailableFeaturesContext(Component)
    canConfigureNotifications={true}
    canUseBadges={true}
    component={
      {
        "breadcrumbs": [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": [
          {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": [],
      }
    }
    onComponentChange={[MockFunction]}
    onPageChange={[Function]}
  />
  <InfoDrawerPage
    displayed={false}
    onPageChange={[Function]}
  >
    <ProjectBadges
      component={
        {
          "breadcrumbs": [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
        }
      }
    />
  </InfoDrawerPage>
  <InfoDrawerPage
    displayed={false}
    onPageChange={[Function]}
  >
    <withNotifications(ProjectNotifications)
      component={
        {
          "breadcrumbs": [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
        }
      }
    />
  </InfoDrawerPage>
</Fragment>
`;

exports[`should render correctly: measures loaded 1`] = `
<Fragment>
  <withAvailableFeaturesContext(Component)
    canConfigureNotifications={false}
    canUseBadges={true}
    component={
      {
        "breadcrumbs": [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": [
          {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": [],
      }
    }
    measures={
      [
        {
          "bestValue": true,
          "metric": "bugs",
          "period": {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
          "value": "1.0",
        },
      ]
    }
    onComponentChange={[MockFunction]}
    onPageChange={[Function]}
  />
  <InfoDrawerPage
    displayed={false}
    onPageChange={[Function]}
  >
    <ProjectBadges
      component={
        {
          "breadcrumbs": [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
        }
      }
    />
  </InfoDrawerPage>
</Fragment>
`;

exports[`should render correctly: private 1`] = `
<Fragment>
  <withAvailableFeaturesContext(Component)
    canConfigureNotifications={false}
    canUseBadges={true}
    component={
      {
        "breadcrumbs": [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": [
          {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": [],
        "visibility": "private",
      }
    }
    onComponentChange={[MockFunction]}
    onPageChange={[Function]}
  />
  <InfoDrawerPage
    displayed={false}
    onPageChange={[Function]}
  >
    <ProjectBadges
      component={
        {
          "breadcrumbs": [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
          "visibility": "private",
        }
      }
    />
  </InfoDrawerPage>
</Fragment>
`;
